--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gulp-requirejs-bundler",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "description": "Gulp plugin: wraps gulp-requirejs, adds ability to emit bundle files and bundle config",
   "keywords": [
-    "gulpplugin"
+    "gulpplugin, requirejs, amd"
   ],
   "author": {
     "name": "Steven Sanderson",
@@ -17,10 +17,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "event-stream": "^3.1.5",
-    "deeply": "^0.1.0",
-    "gulp-requirejs": "^0.1.3",
-    "gulp-util": "^2.2.14",
+    "deeply": "^2.0.3",
+    "event-stream": "^4.0.1",
+    "gulp-requirejs": "^1.2.0",
     "q": "^1.0.1",
     "underscore": "^1.6.0"
   }
